--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -3,6 +3,7 @@ body {
     text-align: center;
     padding: 0 25px;
     font-family: arial, sans-serif;
+    background-color: #4b5658 !important;
 }
 
 h1 {
@@ -53,14 +54,13 @@ h1 {
 form {
     padding: 20px;
     padding-left: 0;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 
 form input[type=text] {
-    margin-right: 10px;
-    width: 70%;
+    width: 100%;
     font-size: 12px;
-    padding: 5px;
+    padding: 15px;
 }
 
 .chat {
@@ -107,3 +107,34 @@ form input[type=text] {
     display: block;
 }
 
+.roomSelect {
+    font-size: 12px;
+}
+
+#head {
+    padding: 20px;}
+
+#header {
+    width: 100%;
+    font-size: 3em !important;
+    -webkit-animation: flashycolor infinite;
+    animation: flashycolor infinite;
+    -webkit-animation-duration: 8s;
+    animation-duration: 8s;
+}
+
+@-webkit-keyframes flashycolor {
+    0%   {color:#FF4D4D;}
+    25%  {color:#FFF94D;}
+    50%  {color:#40CFFF;}
+    75%  {color:#61FF4D;}
+    100% {color:#EF56FC;}
+}
+
+@keyframes flashycolor {
+    0%   {color:#FF4D4D;}
+    25%  {color:#FFF94D;}
+    50%  {color:#40CFFF;}
+    75%  {color:#61FF4D;}
+    100% {color:#EF56FC;}
+}
